--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 
 kafka.address = localhost:9092
-kafka.topic = kafka-topic
-kafka.group = kafka-group
+kafka.topic = kafka-big-data
+kafka.group = kafka-big-data-group
